# figma-design-director

./: .env.example  .gitignore  CLAUDE.md  PROJECT_STATE.md  README.md  SYNC.md  SYSTEM_PROMPT.md  pyproject.toml
agent/: config.py  main.py
agents/: 1_research.md  2_ux_architect.md  3_ui_designer.md  4_cro.md  5_platform.md  6_creative_director.md
extract/: extractor.py  firecrawl.py
gates/: slop_detector.py
knowledge/: component_library.md  design_dna.md
output/andaaz-bvffgzb8fdewg8cq-z03-azurefd-net/: ctl-data.json  grounding.md  mobile-text.txt  sections-data.txt  tokens.json
output/andaaz-bvffgzb8fdewg8cq-z03-azurefd-net/sections/: auto-complete-look.html  auto-header.html  auto-product.html  home-collections.html  home-hero-2.html  home-hero-3.html  home-hero.html  home-newarrivals.html  home-offergrid.html  index.html  page-desktop.html  product-info-mobile.html
output/node-helper-rizwankausar-replit-app/: grounding.md  tokens.json
output/node-helper-rizwankausar-replit-app/sections/: header.html  page.html
references/: exa_search.py  reference_engine.py
scripts/: deploy-azure.bat  setup-runtime.bat  sync-pull.bat  sync-push.bat
tests/: slop_fixture_bad.html
